--- a/.github/workflows/aktiflik.yaml
+++ b/.github/workflows/aktiflik.yaml
@@ -1,1 +1,22 @@
+name: Bot Otomatik Güncelleme
+
+on:
+  schedule:
+    - cron: '*/5 * * * *'
+
+jobs:
+  update-bot:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+
+    - name: Start Bot
+      run: node index.js
 
